# Esp32Good

aliot_mqtt/: CMakeLists.txt  sdkconfig
aliot_mqtt/main/: CMakeLists.txt  aliot_dm.c  aliot_dm.h  aliot_mqtt.c  aliot_mqtt.h  app_global.c  app_global.h  app_wifi.c  app_wifi.h  bsp_i2c.c  bsp_i2c.h  main.c  w25q64_driver.c  w25q64_driver.h
esp32c5prj/: CMakeLists.txt  sdkconfig
esp32c5prj/main/: main.c  my_wifi.c  my_wifi.h
esp32good/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32good/main/: CMakeLists.txt  FT6336G.c  FT6336G.h  idf_component.yml  main.c  my_lcd.c  my_lcd.h  my_wifi.c  my_wifi.h
esp32good/main/display/: FT6336G.c  FT6336G.h  my_lcd.c  my_lcd.h  my_lvgl.c  my_lvgl.h
esp32good/main/lv_port/: lv_port_disp.c  lv_port_indev.c
lcd/: sdkconfig
lcd/main/: spi_master_example_main.c
