idf_component_register(SRCS 
                        "main.c" 
                        "my_wifi.c"
                        "./display/my_lcd.c" 
                        "./display/FT6336G.c" 
                        "./display/my_lvgl.c"
                        "./lv_port/lv_port_disp.c"
                        "./lv_port/lv_port_indev.c"
                       PRIV_REQUIRES 
                        spi_flash 
                        esp_driver_spi 
                        esp_driver_gpio 
                        esp_driver_i2c
                        esp_wifi
                        nvs_flash
                       INCLUDE_DIRS 
                        "." 
                        "./lv_port"
                        "./display")
